# irobot_ros2

./: .gitignore  MESSAGE_ANALYSIS.md  build.sh  readme.md  source.sh
src/dual_arm_ik/: package.xml  setup.cfg  setup.py
src/dual_arm_ik/dual_arm_ik/: clip_control_sim_real_node.py  gripper_control_node.py  head_control_node.py  ik_node.py  ik_posture_node.py  joint_state_aggregator_node copy.py  joint_state_aggregator_node.py  zero_node copy.py  zero_node.py
src/dual_arm_ik/launch/: controllers.launch.py
src/dual_arm_ik/urdf/: irobot.urdf
src/dual_arm_teleop/: package.xml  setup.py
src/dual_arm_teleop/dual_arm_teleop/: teleop_clip_node.py  teleop_node.py
src/irobot_camera/: package.xml  setup.cfg  setup.py
src/irobot_camera/irobot_camera/: cube_position.py  head_track.py  head_track_service.py  irobot_aruco.py  irobot_aruco_depth.py  irobot_aruco_service.py  object_position.py
src/irobot_description/: CMakeLists.txt  package.xml
src/irobot_description/launch/: display.launch.py
src/irobot_description/meshes/: base_link.STL  clipbase_link.STL  head_link3.STL  joint_Link1_1.STL  joint_link1_2.STL  joint_link2_1.STL  joint_link2_2.STL  left_arm_link4.STL  left_arm_link5.STL  left_arm_link7.STL  right_arm_link2.STL  right_arm_link4.STL  right_arm_link7.STL
src/irobot_description/urdf/: irobot.urdf  irobot_visual.urdf  jiazhua_urdf2.urdf
src/irobot_interfaces/: CMakeLists.txt  package.xml
src/irobot_interfaces/msg/: ClipCommand.msg  DualArmPoseTargets.msg  DualArmTargets.msg  GripperCommand.msg  GripperControl.msg  HeadCommand.msg  ObjectPose.msg
src/irobot_interfaces/srv/: GetObjectPose.srv
src/irobot_mujoco/: damping_irobot.py  irobot_mujoco.py  irobot_mujoco2.py  irobot_mujoco3.py  irobot_mujoco4.py
src/irobot_mujoco/asset/: cup.xml  irobot.xml  irobot_new.xml  irobot_new_pd.xml  irobot_pd.xml  scene_irobot.xml  waterbottle.xml
src/irobot_mujoco/asset/asset_irobot/visual/: link1_L.STL  link1_R.STL  link2_L.STL  link2_R.STL  link3_L.STL  link3_R.STL  link4_L.STL  link4_R.STL  link5_L.STL  link5_R.STL  link6_L.STL  link6_R.STL  link7_L.STL  link7_R.STL  link_clip1_L.STL  link_clip1_R.STL  link_clip2_L.STL  link_clip2_R.STL  link_neck1.STL  link_neck2.STL
src/irobot_mujoco/asset/asset_irobot_new/collision/: clip.STL  left_arm_link6.STL  right_arm_link1.STL  right_arm_link5.STL  right_hand_link1.STL  right_hand_link2.STL
src/irobot_mujoco/asset/asset_irobot_new/visual/: head_link1.STL  head_link2.STL  left_arm_link1.STL  left_arm_link2.STL  left_hand_link1.STL  left_hand_link2.STL  right_arm_link6.STL
src/irobot_mujoco/asset/urdf/: irobot.urdf
src/irobot_mujoco/scripts/: MUJOCO_LOG.TXT  urdf2xml.py  visual_xml.py
src/irobot_mujoco/test_pd/: test.py  test1.py  test2.py  test3.py
src/irobot_mujoco/test_tau/: 1.py  test4.py  test5.py  test6.py
src/irobot_mujoco/trans/: base_link.STL  trans_face.py
src/irobot_trajectory/: package.xml  setup.cfg  setup.py
src/irobot_trajectory/irobot_trajectory/: cube_stack_mujoco.py  irobot_plan copy.py  irobot_plan.py  irobot_plan2.py  irobot_plan3.py  irobot_plan4.py  twist_bottle_mujoco.py
src/irobot_trajectory/resource/: irobot_trajectory
src/mintasa_ros_control/: CMakeLists.txt  package.xml
src/mintasa_ros_control/src/: L_whole_control.cpp  R_controller.cpp  R_whole_control.cpp  clip_controller.cpp  dual_arm_controller.cpp  head_controller.cpp  irobot_control.cpp  joint_controller.cpp
