<?xml version="1.0"?>
<package format="3">
  <name>mintasa_ros_control</name>
  <version>0.0.0</version>
  <description>The mintasa_ros_control package for ROS2 Foxy</description>
  <maintainer email="irobot@todo.todo">irobot</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>irobot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>